# llm-whisper-api

./: README.md  llm_whisper_api.py  pyproject.toml
tests/: test_whisper_api.py
